# VaultWarrior

./: Init.md  LICENSE  README.md  pyproject.toml  pytest.ini
ai/: cli.py
ai-vault-planning-cli/: README.md  setup.cfg
ai-vault-planning-cli-1/: pyproject.toml
ai-vault-planning-cli-1/docs/: architecture.md  commands.md  roadmap.md
ai-vault-planning-cli-1/examples/: usage.sh
ai-vault-planning-cli-1/scripts/: dev_install.sh
ai-vault-planning-cli-1/src/ai_vault_cli/commands/: ask.py  capture.py  chat.py  init.py
ai-vault-planning-cli-1/src/ai_vault_cli/indexing/: crawler.py  embeddings.py  parser.py
ai-vault-planning-cli-1/src/ai_vault_cli/llm/: openai_provider.py
ai-vault-planning-cli-1/src/ai_vault_cli/planning/: __init__.py  summarizer.py
ai-vault-planning-cli-1/src/ai_vault_cli/retrieval/: ranker.py
ai-vault-planning-cli-1/src/ai_vault_cli/threads/: __init__.py
ai-vault-planning-cli-1/src/ai_vault_cli/utils/: paths.py
ai-vault-planning-cli-1/src/ai_vault_planning_cli.egg-info/: PKG-INFO  requires.txt  top_level.txt
ai-vault-planning-cli-1/tests/: test_cli.py  test_planning.py  test_retrieval.py
ai-vault-planning-cli/examples/sample_vault/: Note1.md  ProjectX.md
ai-vault-planning-cli/scripts/: build_index_example.sh
ai-vault-planning-cli/src/ai_vault_cli/: __init__.py  cli.py  errors.py
ai-vault-planning-cli/src/ai_vault_cli/commands/: ask.py  capture.py  chat.py  doctor.py  index.py  init.py  plan.py  thread.py
ai-vault-planning-cli/src/ai_vault_cli/config/: loader.py
ai-vault-planning-cli/src/ai_vault_cli/indexing/: __init__.py  crawler.py  embeddings.py  parser.py
ai-vault-planning-cli/src/ai_vault_cli/llm/: prompts.py
ai-vault-planning-cli/src/ai_vault_cli/planning/: planner.py
ai-vault-planning-cli/src/ai_vault_cli/retrieval/: __init__.py  store.py
ai-vault-planning-cli/src/ai_vault_cli/threads/: manager.py
ai-vault-planning-cli/src/ai_vault_cli/utils/: logging.py  time.py
ai-vault-planning-cli/src/ai_vault_cli/vault/: daily.py  metadata.py
ai-vault-planning-cli/src/ai_vault_planning_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai-vault-planning-cli/tests/: test_indexing.py  test_threads.py
ai/core/: config.py  gitwrap.py  index.py  llm.py  openai_embed.py  retrieve.py  threads.py  writeback.py
desktop/: README.md
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/icons/: app.icns
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html  tauri-bridge.js
scripts/: dev_session.sh  gen_icons.py  run_web.sh
tests/: test_chunking.py  test_citations.py  test_config.py  test_enrich.py  test_redaction.py  test_tags.py
vault_ai_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
webapp/: README.md  api.py  static.html
