[metadata]
name = ai-vault-planning-cli
version = 0.1.0
description = A CLI for managing AI-assisted vault planning.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/ai-vault-planning-cli
license = MIT

[options]
packages = find:
install_requires =
    sentence-transformers>=2.7.0
    openai>=1.30.0
    pyyaml>=6.0.1
    faiss-cpu>=1.8.0
    click>=8.0.0

[options.extras_require]
dev =
    black
    flake8
    isort
    pytest

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*