[package]
name = "vaultwarrior-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "shell-all", "dialog-open"] }
anyhow = "1"

[build-dependencies]
tauri-build = { version = "1", features = [] }
base64 = "0.21"

[profile.release]
opt-level = 3
